--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -15,10 +15,10 @@
 
     <div padding class="about-info">
 
-        <h4>Show Tonight 2017</h4>
+        <h4>Biopineurs 2018</h4>
 
         <p>
-            ShowTonight is a sample application that demonstratees how to build apps for the HackX Workshop
+            BioPineurs est l'application des biopineurs par les biopineurs. Parce qu'on n'a pas le temps de niaiser.
         </p>
 
     </div>
