--- a/src/pages/actus-create/actus-create.html
+++ b/src/pages/actus-create/actus-create.html
@@ -23,7 +23,7 @@
   <ion-item>
     <ion-label color="primary">Auteur</ion-label>
     <ion-select [(ngModel)]="author" placeholder="Appuyez pour choisir">
-        <ion-option *ngFor="let contact of contacts">{{contact.firstName}} {{contact.lastName}}<</ion-option>
+        <ion-option *ngFor="let contact of contacts">{{contact.firstName}} {{contact.lastName}}</ion-option>
     </ion-select>
   </ion-item>
 
