--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -3,27 +3,22 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>Welcome</ion-title>
+        <ion-title>Bienvenue sur l'app Biopineurs</ion-title>
     </ion-navbar>
 </ion-header>
 
 <ion-content no-bounce>
     <ion-slides>
-        <ion-slide style="background-image: url('assets/img/slide_1.jpg');">
-            <p>Biopineurs 2017 RPZ</p>
+        <ion-slide style="background-image: url('assets/img/imagine.png');">
+            <p>Apprenez-en plus sur le master</p>
         </ion-slide>
 
-        <ion-slide style="background-image: url('assets/img/slide_2.jpg')">
-            <p>Discover the best shows</p>
+        <ion-slide style="background-image: url('assets/img/research2.jpg')">
+            <p>Trouvez les coordonéees des alumni</p>
         </ion-slide>
 
-        <ion-slide style="background-image: url('assets/img/slide_3.jpg')">
-            <p>
-                Learn how to code with HackX! <br />
-                <button ion-button (click)="openShowList()">
-                    Start
-                </button>
-            </p>
+        <ion-slide style="background-image: url('assets/img/startup.jpg')">
+            <p>Suivez les actualités du secteur</p>
         </ion-slide>
     </ion-slides>
 
