--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -10,7 +10,7 @@
 <ion-content>
 
     <div class="about-header">
-        <img src="assets/img/logo.jpg">
+        <img src="assets/img/logo.png">
     </div>
 
     <div padding class="about-info">
