Changed welcome page colors

--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -3,18 +3,18 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>Bienvenue sur l'app Biopineurs</ion-title>
+        <ion-title>Bienvenue</ion-title>
     </ion-navbar>
 </ion-header>
 
 <ion-content no-bounce>
     <ion-slides>
         <ion-slide style="background-image: url('assets/img/imagine.png');">
-                <p><button (click)="openInformation()">Apprenez-en plus sur le master</button></p>
+                <p><button (click)="openInformation()">Apprenez-en plus sur le Master !</button></p>
         </ion-slide>
 
         <ion-slide style="background-image: url('assets/img/research2.jpg')">
-            <p><button (click)="openContactList()">Trouvez les coordonéees des alumni</button></p>
+            <p><button (click)="openContactList()">Trouvez les coordonnéees des alumni</button></p>
         </ion-slide>
 
         <ion-slide style="background-image: url('assets/img/startup.jpg')">
