Added space after like icon

--- a/src/pages/actus-list/actus-list.html
+++ b/src/pages/actus-list/actus-list.html
@@ -50,13 +50,13 @@
     <ion-col>
       <button ion-button color="primary" clear small icon-start>
         <ion-icon name='thumbs-up'></ion-icon>
-        1 Likes
+        <p>1 Like</p>
       </button>
     </ion-col>
     <ion-col>
       <button ion-button color="primary" clear small icon-start>
         <ion-icon name='text'></ion-icon>
-        0 Comments
+        <p>0 Comments</p>
       </button>
     </ion-col>
     <ion-col align-self-center text-center>
