Changed format welcome images et contact images

--- a/src/pages/contact-detail/contact-detail.html
+++ b/src/pages/contact-detail/contact-detail.html
@@ -16,7 +16,7 @@
          </ion-fab>
 
     <ion-card *ngIf="contact.id">
-        <img src="{{contact.photo}}">   
+        <img src="{{contact.photo}}" style="border-radius:50%">   
         <ion-card-content>
             <h2 class="card-title">{{contact.firstName}} {{contact.lastName}}</h2>
         </ion-card-content>
