--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -30,25 +30,25 @@
 
 -->
 
-<ion-content class="card-background-page">
+<ion-content text-center class="card-background-page">
+
 <button (click)="openInformation()" >
   <ion-card>
-
-    <img src="assets/img/imagine.png" class="center-cropped" width="200" height="200"/>
+    <img src="assets/img/imagine.png" class="center-cropped"/>
     <div class="card-title">En savoir plus sur le master</div>
   </ion-card>
 </button>
 
-<button (click)="openContactList()" color="white">
+<button (click)="openContactList()">
   <ion-card>
-    <img src="assets/img/research2.jpg" class="center-cropped" width="200" height="200"/>
+    <img src="assets/img/research2.jpg" class="center-cropped"/>
     <div class="card-title">Trouvez les coordonnées des Alumni</div>
   </ion-card>
 </button>
 
 <button (click)="openActuList()">
   <ion-card>
-    <img src="assets/img/startup.jpg" class="center-cropped" width="200" height="200"/>
+    <img src="assets/img/startup.jpg" class="center-cropped"/>
     <div class="card-title">Suivez les actualités du secteur</div>
   </ion-card>
 </button>
