--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -35,7 +35,7 @@
 <button (click)="openInformation()" class="transparent">
   <ion-card>
     <img src="assets/img/imagine.png" class="center-cropped"/>
-    <div class="card-title">En savoir plus sur le master</div>
+    <div class="card-title">En savoir plus sur le Master</div>
   </ion-card>
 </button>
 
