--- a/src/pages/contact-detail/contact-detail.html
+++ b/src/pages/contact-detail/contact-detail.html
@@ -28,7 +28,7 @@
             </ion-item>
             <ion-item>
                 <ion-icon item-left name="at"></ion-icon>
-                <h3>Adresse mail</h3>
+                <h3>Mail</h3>
                 <ion-note item-right>{{contact.email}}</ion-note>
             </ion-item>
             <ion-item>
