--- a/src/pages/information/information.html
+++ b/src/pages/information/information.html
@@ -3,7 +3,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>A propos du MSc/M2 Bioentrepreneurs</ion-title>
+        <ion-title>A propos du Master</ion-title>
     </ion-navbar>
 </ion-header>
 
@@ -35,14 +35,14 @@
 
         <figure class="button1">
 
-             <button ion-button center icon-right onclick="window.open('http://institutimagine.org/images/articles/3Volets-Masters-Imagine-A4-04-DEF.pdf')">
+             <button ion-button full icon-right onclick="window.open('http://institutimagine.org/images/articles/3Volets-Masters-Imagine-A4-04-DEF.pdf')">
             Brochure de présentation   
             <ion-icon name="create"></ion-icon>
         </button>  <br> <br> </figure>  
 
         <figure class="button2">
 
-        <button ion-button center icon-right onclick="window.open('http://institutimagine.org/images/news/Formulaire%20de%20candidature%20Master%20Bioentrepreneurs%20Imagine%20année%202017-2018.pdf')">
+        <button ion-button full icon-right onclick="window.open('http://institutimagine.org/images/news/Formulaire%20de%20candidature%20Master%20Bioentrepreneurs%20Imagine%20année%202017-2018.pdf')">
            Formulaire de candidature
         <ion-icon name="create"></ion-icon>
         </button>  
